# MathLib

./: .gitignore  CMakeLists.txt  README.md
CMake/: Catch2.cmake
Examples/: CMakeLists.txt
Examples/PathTracer/: CMakeLists.txt  Main.cpp
Examples/PathTracer/Include/: Base.hpp  Camera.hpp  Framebuffer.hpp  Light.hpp  Material.hpp  Sampling.hpp  Scene.hpp
Examples/PathTracer/Source/: Camera.cpp  Framebuffer.cpp  Light.cpp  Material.cpp  Sampling.cpp  Scene.cpp
Math/: Math.hpp  Vector.hpp
MathLib/: CMakeLists.txt
MathLib/Include/Math/: Base.hpp  Complex.hpp  Constants.hpp  Functions.hpp  Geometry.hpp  Matrix.hpp  Noise.hpp  Point.hpp  Quaternion.hpp  Random.hpp  Transform.hpp  Vector.hpp
MathLib/Include/Math/Common/: Array.hpp  BoolTools.hpp  Concepts.hpp  Function.hpp  Packs.hpp  Traits.hpp  Types.hpp
MathLib/Include/Math/Common/Implementation/: BoolTools.hpp  Packs.hpp  PacksTools.hpp  StrongType.hpp  StrongTypeSelectors.hpp  StrongTypeUtils.hpp  StrongTypes.hpp  StrongTypesOperators.hpp  StrongTypesSelectors.hpp  StrongTypesUtils.hpp  Traits.hpp  Types.hpp
MathLib/Include/Math/Debug/: StreamOperators.hpp
MathLib/Include/Math/Implementation/: Algorithms.hpp  Constants.hpp  Functions.hpp  Matrix.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  MatrixOperators.hpp  MatrixUtilities.hpp  Point.hpp  Point2.hpp  Point3.hpp  PointOperators.hpp  PointUtilities.hpp  Quaternion.hpp  QuaternionOperators.hpp  QuaternionUtilities.hpp  Transform.hpp  Transform2.hpp  Transform3.hpp  TransformOperators.hpp  TransformUtilities.hpp  Utilities.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorOperators.hpp  VectorUtilities.hpp
MathLib/Include/Math/Implementation/Base/: Array.hpp  Complex.hpp  Concepts.hpp  Packs.hpp  StrongTypes.hpp  StrongTypesUtils.hpp  Types.hpp  Utilities.hpp  Warnings.hpp
MathLib/Include/Math/Implementation/Functions/: Angles.hpp  BasicFunctions.hpp  CompositionFunctions.hpp  ElementaryFunctions.hpp  Equal.hpp  FloatUtils.hpp  FunctionDerivatives.hpp  HasNaN.hpp  IntUtils.hpp  Log.hpp  Polynomials.hpp  Trigonometric.hpp  TrigonometricFunctions.hpp  ValueShift.hpp
MathLib/Include/Math/Implementation/Functions/Instantiable/: CompositionFunctions.hpp  ElementaryFunctions.hpp  FunctionDerivatives.hpp  PiecewiseFunctions.hpp  UtilityFunctions.hpp
MathLib/Include/Math/Implementation/Geometry/: Intersections.hpp  Shapes.hpp
MathLib/Include/Math/Implementation/Geometry/2D/: Bounds.hpp  Contains.hpp  Distance.hpp  Intersect.hpp  Intersections.hpp  Overlaps.hpp  Shapes.hpp  Transform.hpp
MathLib/Include/Math/Implementation/Noise/: Layer.hpp  Perlin.hpp  Simplex.hpp  Worley.hpp
MathLib/Include/Math/Implementation/Random/: Concepts.hpp  PoissonDistribution.hpp  Splitmix.hpp  UniformDistribution.hpp  Utils.hpp  Xoshiro.hpp
MathLib/Include/Math/Noise/: Perlin.hpp
MathLib/Include/Math/Utils/: ContainerTools.hpp  CoordinateFrame.hpp  Transform.hpp
MathLib/Include/MathLib/: Vector.hpp
Tests/: CMakeLists.txt  TestConcepts.cpp  TestFunctions.cpp  TestMatrices.cpp  TestNoise.cpp  TestPoints.cpp  TestQuaternions.cpp  TestTransforms.cpp  TestTypes.cpp  TestUtilsContainerTools.cpp  TestVectors.cpp
Tests/Base/: Array.cpp  Types.cpp
Tests/BaseTests/: ArrayTests.cpp  PacksTests.cpp
Tests/CommonTests/: ArrayTests.cpp  BoolToolsTests.cpp  FunctionTests.cpp  PacksTests.cpp
Tests/Functions/: CosTests.cpp  MinMax.cpp  PolynomialsTests.cpp  SimpleUtilFuncs.cpp  Sin.cpp  SinTests.cpp  SqrtTests.cpp
Tests/Functions/BasicFunctions/: MinMaxTests.cpp  PowerTests.cpp  SignAbsTests.cpp
Tests/Functions/BasicFunctions/TrigTests/: CosTests.cpp
Tests/Functions/InstantiableFunctions/: UtilityFunctionsTests.cpp
Tests/FunctionsTests/: CompositionFunctionsTests.cpp  ElementaryFunctionsTests.cpp  PowerTests.cpp  TrigonometryTests.cpp  ValueShiftTests.cpp
Tests/FunctionsTests/BasicFunctionsTests/: ClampLerpInvLerpTests.cpp  DegreeRadianConversionTests.cpp  LogTests.cpp  MinMaxTests.cpp  SignAbsTests.cpp  SqrtTests.cpp  TruncFloorCeilFracTests.cpp  ValueShiftTests.cpp
Tests/FunctionsTests/BasicFunctionsTests/TrigTests/: SinTests.cpp
Tests/FunctionsTests/InstantiableFunctionsTests/: PiecewiseFunctionsTests.cpp
Tests/Geometry/2D/: Circle.cpp  Ellipse.cpp  Line.cpp  Quadrilateral.cpp  Ray.cpp  Rectangle.cpp  Triangle.cpp
Tests/Matrix/: MatrixPointOperator.cpp  MatrixUtils.cpp
Tests/MatrixTests/: MatrixOperatorTests.cpp  MatrixPointOperatorTests.cpp  MatrixScalarOperatorTests.cpp  MatrixTestsCommon.hpp  MatrixTypeTests.cpp  MatrixUtilsTests.cpp  MatrixVectorOperatorTests.cpp
Tests/Point/: PointVectorOperator.cpp
Tests/PointTests/: PointConversions.cpp  PointOperatorTests.cpp  PointTypeTests.cpp  PointVectorOperatorTests.cpp
Tests/RandomTests/: UniformDistributionTests.cpp
Tests/Static/: CMakeLists.txt
Tests/Transform/: TransformTestsCommon.hpp  TransformType.cpp  TransformUtils.cpp  TransformVectorOperator.cpp
Tests/TransformTests/: TransformOperatorTests.cpp  TransformUtilsTests.cpp
Tests/Unit/: CMakeLists.txt  TestQuaternions.cpp  TestTypes.cpp
Tests/Unit/Base/: Array.cpp  Packs.cpp  Types.cpp
Tests/Unit/Functions/BasicFunctions/: LogTests.cpp
Tests/Unit/Geometry/2D/: Circle.cpp  Line.cpp  Rectangle.cpp  Triangle.cpp
Tests/Unit/Point/: PointConversions.cpp  PointOperator.cpp
Tests/Unit/Random/: UniformDistribution.cpp
Tests/Unit/Transform/: TransformPointOperator.cpp
Tests/Unit/Vector/: VectorOperator.cpp  VectorType.cpp
Tests/Vector/: VectorUtils.cpp
Tests/VectorTests/: VectorOperatorTests.cpp  VectorTypeTests.cpp  VectorUtilsTests.cpp
include/Math/: Constants.hpp  Functions.hpp  Math.hpp  Matrix.hpp  Point.hpp  Quaternion.hpp  Vector.hpp
include/Math/Debug/: StreamOperators.hpp
include/Math/Utils/: Camera.hpp  CoordinateFrame.hpp  Transform.hpp
